# school-lunch-modernization-grants-demo

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
audit_notes/: README.md
audits/: README.md
data/original/: cafeteria_partner_role_records.csv  established_school_crosswalk.csv  school_directory.csv  school_lunch_modernization_grant_awards.csv  student_health_wellbeing_survey_extract.csv
data/raw/: company_directory.csv  film_tax_credit_purchases.csv  firm_directory.csv  green_credit_purchases.csv  legacy_energy_finance_deals.csv  legacy_film_finance_deals.csv
docs/: app.js  guide.html  index.html  intro_email.md  live_demo_script.md  project_brief_expected.md  session_invitation_email.md  setup.html  styles.css  workshop_revision_rubric.md
docs/attachments/: student_health_wellbeing_survey_extract.csv
docs/setup/: access.html  claude-code.html  codex.html  no-project-folder.html  python.html  skills.html  terminal-checks.html
scripts/: build_assignment_email_pdf.py  build_followup_email_pdf.py  build_school_year_panel.py  build_workshop_context_assets.py  build_workshop_presenter_notes_pdf.py  classify_cafeteria_partner_roles.py  merge_student_survey_outcomes.py  run_causal_spec_lab.py
src/: build_company_year_panel.py  build_firm_year_panel.py  classify_legacy_deal_parties.py  classify_legacy_film_deal_parties.py
