[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "school-lunch-modernization-grants-demo"
version = "0.1.0"
description = "Fictional STAX Lab teaching demo for agentic AI research workflows using school lunch modernization grant data."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[tool.setuptools]
py-modules = []
